Logic for Telemetry, System Health and improvised the overall project structure

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /SmartPlantWaterer/backend/bin/Debug/net8.0
 /.vs/iotsmartwateringapp.slnx/v18
 /SmartPlantWaterer/.vs/ProjectEvaluation
+/.vs/SmartWateringApp/v17
+/.vs
+/SmartPlantWaterer/backend/.vs/ProjectEvaluation
