Added Jwt claims-based authentication, Battery Health check, Health Alerts, ESP firmware logic

--- a/SmartPlantWaterer/backend/appsettings.json
+++ b/SmartPlantWaterer/backend/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlServer": "Server=localhost;Database=SmartPlant;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Telegram": {
+    "BotToken": "",
+    "ChatId": ""
   }
 }
