--- a/SmartPlantWaterer/backend/SmartPlantWaterer.csproj
+++ b/SmartPlantWaterer/backend/SmartPlantWaterer.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Helpers\MapperProfile\" />
     <Folder Include="Services\Implementations\Alerts\" />
   </ItemGroup>
 
